Fixed the input form and added new line to prevent is from overlapping other content

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -30,6 +30,27 @@ input.submit-button {
     cursor: pointer;
     font-size: 18px;
 }
+table.form-table {
+    background-color: #FAFAFA;
+    margin-left: -10px;
+    margin-right: -10px;
+    margin-top: 74px;
+    margin-bottom: 0px;
+    padding-bottom: 0px;
+    padding-top: 0px;
+    padding-bottom: 0px;
+}
+div.fixed-form-div {
+    background-color: #FAFAFA;
+    position: fixed;
+    margin-left: auto;
+    margin-right: auto;
+    padding-left: 2px;
+    width: 100%;
+    top: 70px;
+    height: 75px;
+    z-index: 9999;
+}
 
 /* Maps */
 div.map {
@@ -141,7 +162,6 @@ div.grey-canvas {
     margin-right: -10px;
     margin-top: 74px;
     margin-bottom: 0px;
-    padding-bottom: 0px;
     padding-top: 0px;
     padding-bottom: 0px;
 }
